# demo_uam_2025

./: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: 01_ps_first_notebook.ipynb
src/: character_analyzer.py  llm_dependent_functions.py  test_character_analyzer.py  test_fixture_utils.py  test_llm_dependent_functions.py  test_utils.py  utils.py
